tests/negative/ConstructorExpectedLeftApplication.juvix
module ConstructorExpectedLeftApplication;

f : {A : Type} -> A -> A;
f (x y) := x;

end;
